Bug 49441 - FILEOPEN for multiple documents fails from built-in File Dialog
Summary: FILEOPEN for multiple documents fails from built-in File Dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-05-03 11:11 UTC by Rainer Bielefeld Retired
Modified: 2012-08-29 16:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-05-03 11:11:42 UTC
With old LibO file dialog in 3.5 it was possible to open multiple documents from LibO file dialog.

No longer possible with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 52348aa]" (tinderbox: Win-x86@6-fast, pull time 2012-04-27 21:25:23).

steps how to reproduce:

1. Start LibO from WIN Programs Start Center
   > Libo Start Center appears
2. Menu 'Tools -> Options -> LigO -> General', check 'Use LibO file dialog' if
   necessary
3. Menu 'File -> Open'
4. Browse for a folder with multiple ODF documents
5. Select 2 or more arbitrary ODF documents with <control+click>
   (I selected 2 .odt Writer documents)
6. <Open>
   Expected: all documents will be opened
   Actual: nothing happens, no document will be opened.
Comment 1 Rainer Bielefeld Retired 2012-05-03 13:21:26 UTC
Still the same with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 35ec153]" (tinderbox: Win-x86@6-fast, pull time 2012-05-02 06:53:41)
Comment 2 Jean-Baptiste Faure 2012-05-06 09:53:47 UTC
Reproducible with current master (Build ID: 32af02b) under Ubuntu 11.10 x86_64
It works as expected in LO 3.5.3.2

Best regards. JBF
Comment 3 Roman Eisele 2012-07-21 10:04:49 UTC
Also reproducible on MacOS X (10.6.8, Intel) with
  LibreOffice 3.6.0.2 (Build ID: 815c576),
  German langpack installed.

(Only when you check Options > LibreOffice > General > Open/Save dialogs: "Use LibreOffice Dialogs". "Good" (?) news: IMHO only few MacOS X users will activate this option, because the LibO file dialog looks rather ugly, fragile, and outdated on MacOS X. Bad news: this is probably yet another bug -- missing adaption of this dialog to MacOS X UI ...)

Hint: With the default (MacOS X) file open dialog, it is still possible to open multiple files at once.
Comment 4 Viktor Nilsson 2012-08-22 20:02:30 UTC
In OS X 10.6, LibreOffice 3.6.0.4 OOO360m1(Build:104): It does not work to open multiple files by selecting them in Finder and opening them, neither by double-clicking nor dragging to the dock icon.
This is with a clean install, no preferences changed. (Old prefs. folders deleted).
I don't consider it very power-user:y to open multiple files at once.
Error message: 
"filename1_with_full_path [newline]
filename2_with_full_path does not exist"

Using the open-dialog it works, as been said by Roman Eisele.
Comment 5 Rainer Bielefeld Retired 2012-08-24 11:06:26 UTC
Although not a MAB, this one is really annoying for users who need their office software for effective Work. Starting to work on a new project I need all 6 documents opened to add some base data to all documents, and this regression is very annoying because it interrupts the workflow to what I have been used.

@Ivan:
Is this something you would like to deal with?
Comment 6 Not Assigned 2012-08-24 12:31:11 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb0aa85747fa6ada9a7dc4b32e5c5bf3d3850f35

fdo#49441: don't overwrite the first element in the sequence
Comment 7 Ivan Timofeev (retired) 2012-08-24 12:41:43 UTC
Fixed in master, proposed for 3-6: https://gerrit.libreoffice.org/474

BTW, the bug is not related to the file picker improvements :)
Comment 8 Not Assigned 2012-08-24 14:02:26 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=500b4069b66aa897d3ec2a3015d8e061680a8d66&g=libreoffice-3-6

fdo#49441: don't overwrite the first element in the sequence


It will be available in LibreOffice 3.6.2.
Comment 9 Rainer Bielefeld Retired 2012-08-29 15:56:57 UTC
Fix Verified with unzipped Master Build  "LOdev " 3.7.0.0.alpha0+  ENGLISH UI  [Build ID: 9ca3b53]" (tinderbox:W2008R2@20, pull time 2012-08-28 21:50:05) // WIN7 Home Premium (64bit)
Comment 10 Ivan Timofeev (retired) 2012-08-29 16:07:59 UTC
Adjusted Summary: 'new File Dialog' -> 'built-in File Dialog'.