fdo#49441: don't overwrite the first element in the sequence

regression from 399e425fc9b9a89045bb1653769f581ed5fa5028

Change-Id: I2907a03ca731f43630e5f36cf78682de8a364924
(cherry picked from commit cb0aa85747fa6ada9a7dc4b32e5c5bf3d3850f35)